# RustySandbox

./: Cargo.toml
assets/shaders/: shader.wgsl
src/: buffer.rs  camera.rs  client.rs  cube.rs  egui_instance.rs  error.rs  main.rs  renderer.rs  vertex.rs  window.rs
