[package]
name = "rusty_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19"
egui_demo_lib = "0.19.0"
egui_wgpu_backend = "0.20.0"
egui_winit_platform = "0.16.0"
pollster = "0.2.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.14.2"
winit = "0.27.5"
